--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,6 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile 'org.postgresql:postgresql'
 }
