--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.temp.use_jdbc_metadata_defaults=false
+spring.sendgrid.api-key=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
