--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -7,4 +7,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.temp.use_jdbc_metadata_defaults=false
-spring.sendgrid.api-key=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
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vamperelle@gmail.com
+spring.mail.password=Punto007
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
