--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
 	id 'war'
+	id "org.sonarqube" version "2.7.1"
 }
 
 group = 'ch.noseryoung.plj'
@@ -24,7 +25,7 @@ dependencies {
 	implementation 'org.postgresql:postgresql'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
-	implementation 'com.sendgrid:sendgrid-java:4.0.1'
+	implementation 'org.springframework.boot:spring-boot-starter-mail' 
 }
 
 
